# akasha-bot

./: .dockerignore  .env.example  .gitignore  .lando.yml  Dockerfile  LICENSE  README.md  database.py  discord_bot.py  docker-compose.override.yml  docker-compose.yml  lando-bot.sh  main.py  pyproject.toml  requirements.txt  webhook_server.py
.github/workflows/: docker-publish-whatsapp.yml  docker-publish.yml
config/: auto_responses.json  auto_responses_v3.json
integrations/: account_dashboard.py  admin_access.py  admin_dashboard.py  auto_responder.py  container_services.py  expiration_alerts.py  health_checker.py  invitation_identity_sync.py  invitation_manager.py  onboarding.py  overseerr_client.py  plex_reports_client.py  poll_manager.py  problem_reports.py  services_monitor.py  sync_service.py  tautulli_client.py  tracearr_client.py  wizarr_client.py
node_whatsapp/: .dockerignore  Dockerfile  README.md  index.js  package-lock.json  package.json
scripts/: backup-database.sh  deploy-unraid.sh  init_db.sql  update_readme.py
tests/: test_auto_responder.py  test_container_services.py  test_discord_bot.py  test_health_checker.py  test_inbox_unanswered.py  test_invitation_identity_sync.py  test_meta.py  test_onboarding.py  test_overseerr_client.py  test_problem_reports.py  test_tautulli_client.py
