# pyproject.toml
[project]
name = "multiplaform-bridge-inbox-discord-bot"
version = "0.42.6"
requires-python = ">=3.11"
description = "Unified inbox bridge bot scaffold"

[project.dependencies]
python-dotenv = ">=1.0.0"
discord.py = ">=2.5.0"
python-telegram-bot = ">=22.0"
aiosqlite = ">=0.18.0"
aiohttp = ">=3.9"
rapidfuzz = ">=3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
